--- a/resources/css/color.css
+++ b/resources/css/color.css
@@ -1,3 +1,106 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+    background-color: #f4f9fc;
+    width: 100%;
+    height: 100vh;
+    overflow-y: auto;
+    overflow-x: hidden;
+    z-index: -1;
+}
+
+.gradient-circle {
+    position: absolute;
+    width: 50vw;
+    height: 35vh;
+    border-radius: 50%;
+}
+
+.ellipse-1 {
+    /* position: relative; */
+    left: 30%;
+    top: 15%;
+    background: linear-gradient(109.91deg, #a9c5e7 10.17%, #f2cbec 88.19%);
+    filter: blur(150px);
+}
+
+.ellipse-2 {
+    /* position: relative; */
+    left: 70%;
+    top: 30%;
+    background: linear-gradient(270.64deg, #bfbceb 13.73%, #efc4cf 92.26%);
+    filter: blur(200px);
+}
+
+.ellipse-3 {
+    /* position: relative; */
+    left: 85%;
+    top: 30%;
+    background: #ffdaca;
+    filter: blur(200px);
+}
+
+.ellipse-4 {
+    /* position: relative; */
+    left: -5%;
+    top: 25%;
+    background: linear-gradient(96.78deg, #f9dbcd -4.94%, #c4c3e9 86.78%);
+    filter: blur(200px);
+}
+
+.ellipse-5 {
+    width: 30vw;
+    height: 40vh;
+    left: 45%;
+    top: 110%;
+    background: linear-gradient(96.78deg, #f9dbcd -4.94%, #c4c3e9 86.78%);
+    filter: blur(200px);
+    /* position: relative; */
+}
+
+.navbar-container {
+    height: 8vh;
+    margin-bottom: 13vh;
+}
+
+.top {
+    z-index: 1;
+    position: relative;
+    /* border: 1px solid black; */
+    /* border: 1px solid black; */
+}
+
+.cont {
+    height: 25rem;
+    margin-left: 7vw;
+}
+
+.left img {
+    width: 27rem;
+}
+
+.input {
+    background: linear-gradient(
+        180deg,
+        rgba(242, 242, 242, 0.67) 0%,
+        rgba(242, 242, 242, 0) 100%
+    );
+    border: 0.125rem dashed rgba(133, 133, 133, 0.88);
+    height: 25rem;
+    color: rgba(0, 0, 0, 0.49);
+}
+
+.qoutes {
+    color: #858585;
+}
+
+.output {
+    background: white;
+    height: 30rem;
+}
+
+.output img {
+    width: 30rem;
+}
