--- a/resources/css/color.css
+++ b/resources/css/color.css
@@ -77,6 +77,7 @@ body {
 }
 
 .cont {
+    z-index: 1;
     height: 30vw;
     margin-left: 9vw;
 }
@@ -123,13 +124,28 @@ body {
 
 .output {
     background: white;
-    height: 35vw;
+    height: 45vw;
 }
 
 .output img {
-    width: 33vw;
+    width: 23vw;
 }
 
 .output h1 {
     font-size: 2vw;
+}
+
+.boxes {
+    width: 60%;
+    display: flex;
+    margin-top: 2vw;
+    flex-direction: row;
+    justify-content: space-around;
+    /* border: 1px solid black; */
+}
+
+.box {
+    width: 15%;
+    height: 5vw;
+    /* border: 1px solid black; */
 }
