--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.navbar-container{
+    height: 8vh;
+    margin-bottom: 5vh;
+    font-family: 'Poppins';
+}
