--- a/public/css/categories.css
+++ b/public/css/categories.css
@@ -1,4 +1,5 @@
 @import url(http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300ita‌​lic,400italic,500,500italic,700,700italic,900italic,900);
+@import url(https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap);
 
 body {
     background-color: #f4f9fc;
@@ -141,4 +142,9 @@ ul > li {
 
 .courses{
     margin-bottom: 100px;
+}
+
+.navbar-container{
+    height: 8vh;
+    font-family: 'Poppins';
 }
