--- a/resources/css/color.css
+++ b/resources/css/color.css
@@ -60,10 +60,12 @@ body {
     /* position: relative; */
 }
 
-.navbar-container {
+.navbar-container{
     height: 8vh;
-    margin-bottom: 10vw;
+    margin-bottom: 5vh;
+    font-family: 'Poppins';
 }
+
 
 .top {
     z-index: 1;
