--- a/resources/css/signin.css
+++ b/resources/css/signin.css
@@ -3,12 +3,17 @@
 @tailwind utilities;
 
 body {
-    background-color: #F4F9FC;
-    width: 100%;
+    width: 100vw;
     height: 100vh;
-    overflow-y: auto;
+    overflow-y: hidden;
     overflow-x: hidden;
-    z-index: -1;
+    font-family: 'Poppins';
+    z-index: 999;
+}
+
+.backgroundlgn {
+    margin-top: -8vw;
+    @apply max-h-full;
 }
 
 .gradient-circle {
@@ -16,32 +21,34 @@ body {
     width: 50vw;
     height: 35vh;
     border-radius: 50%;
+    z-index: -1;
 }
 
 .ellipse-1 {
-    left: 15%;
-    top: 1%;
-    background: linear-gradient(270.64deg, #BFBCEB 13.73%, #EFC4CF 92.26%);
+    left: -8%;
+    top: 4%;
+    background: linear-gradient(270.64deg, #BFBCEB 13.73%, #dcb9e7 92.26%);
     filter: blur(130px);
+    z-index: -1;
 }
 
 .ellipse-2 {
-    left: 80%;
-    top: 30%;
+    left: 70%;
+    top: 15%;
     background: #FFDACA;
     filter: blur(130px);
 }
 
 .ellipse-3 {
-    left: 85%;
-    top: 30%;
+    left: 40%;
+    top: 15%;
     background: linear-gradient(109.91deg, #A9C5E7 10.17%, #F2CBEC 88.19%);
     filter: blur(130px);
 }
 
 .ellipse-4 {
     left: -15%;
-    top: 60%;
+    top: 55%;
     background: #FFDACA;
     filter: blur(130px);
 }
@@ -60,26 +67,22 @@ body {
     margin-bottom: 13vh;
 }
 
+.backgroundlgn {
+    @apply h-full;
+}
+
 .login-box{
-    position: relative;
-    z-index: 1;
-    @apply flex flex-col items-center justify-center;
+    @apply flex justify-center place-items-center;
 }
 
-.login-box .sign-in{
-    @apply text-7xl font-bold text-black mb-9;
+.form-lgn{
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 0px 55px 6px rgba(0, 0, 0, 0.6);
+    border-radius: 34px;
+    margin-top: -55vw;
+    @apply flex-col bg-white py-2 px-16 justify-center;
 }
 
-.login-box .quote{
-    @apply text-2xl text-center font-medium mb-6;
-    width: 30vw;
+.inputbox{
+    box-shadow: 0px 4px 10px rgba(133, 133, 133, 0.5);
+    @apply flex items-center h-10 px-3 w-64 bg-gray-100 mb-6 shadow-gray-400 rounded-full focus:outline-none focus:ring-2 placeholder:font-bold placeholder-gray-400;
 }
-
-.img-signin {
-    position: absolute;
-    width: 33vw;
-    height: 68vh;
-    left: 60vw;
-    top: -9vh;
-    padding-bottom: 5vh;
-  }
