pushfixfooter,login,routes

--- a/resources/css/footer.css
+++ b/resources/css/footer.css
@@ -4,6 +4,7 @@
 
 .footer {
     background: linear-gradient(96.57deg, #767bde 20.06%, #f78c98 81.5%);
+    font-family: Poppins;
 }
 
 .footerdown {
