--- a/resources/css/color.css
+++ b/resources/css/color.css
@@ -11,71 +11,27 @@ body {
     z-index: -1;
 }
 
-.gradient-circle {
-    position: absolute;
-    width: 50vw;
-    height: 35vh;
-    border-radius: 50%;
-}
-
-.ellipse-1 {
-    /* position: relative; */
-    left: 30%;
-    top: 15%;
-    background: linear-gradient(109.91deg, #a9c5e7 10.17%, #f2cbec 88.19%);
-    filter: blur(150px);
-}
-
-.ellipse-2 {
-    /* position: relative; */
-    left: 70%;
-    top: 30%;
-    background: linear-gradient(270.64deg, #bfbceb 13.73%, #efc4cf 92.26%);
-    filter: blur(200px);
-}
-
-.ellipse-3 {
-    /* position: relative; */
-    left: 85%;
-    top: 30%;
-    background: #ffdaca;
-    filter: blur(200px);
-}
-
-.ellipse-4 {
-    /* position: relative; */
-    left: -5%;
-    top: 25%;
-    background: linear-gradient(96.78deg, #f9dbcd -4.94%, #c4c3e9 86.78%);
-    filter: blur(200px);
-}
-
-.ellipse-5 {
-    width: 30vw;
-    height: 40vh;
-    left: 45%;
-    top: 110%;
-    background: linear-gradient(96.78deg, #f9dbcd -4.94%, #c4c3e9 86.78%);
-    filter: blur(200px);
-    /* position: relative; */
-}
-
-.navbar-container{
+.navbar-container {
     height: 8vh;
-    margin-bottom: 5vh;
-    font-family: 'Poppins';
+    /* margin-bottom: 5vh; */
+    font-family: "Poppins";
 }
-
 
 .top {
+    margin-top: 1vw;
     z-index: 1;
+    padding-top: 2.3vw;
     position: relative;
-    /* border: 1px solid black; */
-    /* border: 1px solid black; */
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
 }
 
 .left {
     margin-left: 2vw;
+    /* margin-top: 2vw; */
 }
 
 .cont {
@@ -89,11 +45,23 @@ body {
 }
 
 .left h1 {
-    font-size: 5vw;
+    font-size: 1.8vw;
+    color: #4f4f4f;
 }
 
 .left p {
-    font-size: 2.2vw;
+    font-size: 1.3vw;
+    color: #a1a1a1;
+    /* border: 1px solid black; */
+}
+
+.con-input {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+    margin: 2vw 0;
 }
 
 .input {
@@ -104,33 +72,61 @@ body {
     );
     border: 0.125rem dashed rgba(133, 133, 133, 0.88);
     height: 30vw;
-    margin: 3vw 4vw;
+    width: 65vw;
     color: rgba(0, 0, 0, 0.49);
 }
 
 .input img {
-    width: 9vw;
+    width: 14vw;
 }
 
 .input p {
-    font-size: 1.8vw;
+    font-size: 1.5vw;
+}
+
+.generate {
+    background-color: #6e7bdb;
+    font-size: 1.4vw;
+    padding: 0.8vw 0vw;
+    margin: 0 44vw;
+    border-radius: 2vw;
+    color: #ffffff;
+}
+
+.generate:hover {
+    background-color: #4f5ecf;
 }
 
 .qoutes {
     color: #858585;
+    margin-bottom: 4vw;
+    margin-top: 3vw;
 }
 
 .qoutes p {
-    font-size: 2vw;
+    font-size: 1.8vw;
+}
+
+.hasil {
+    padding-top: 1.5vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .output {
+    margin-top: 1vw;
+    margin-bottom: 3vw;
     background: white;
-    height: 45vw;
+    height: 40vw;
+    width: 65vw;
+    background: rgba(255, 255, 255, 0.5);
+    box-shadow: 0px 0px 52px rgba(0, 0, 0, 0.25);
 }
 
 .output img {
-    width: 23vw;
+    width: 20vw;
 }
 
 .output h1 {
@@ -138,7 +134,7 @@ body {
 }
 
 .boxes {
-    width: 60%;
+    width: 80%;
     display: flex;
     margin-top: 2vw;
     flex-direction: row;
@@ -147,7 +143,13 @@ body {
 }
 
 .box {
-    width: 15%;
+    width: 18%;
     height: 5vw;
+    /* border: 1px solid black; */
+}
+
+.hasil {
+    color: #4f4f4f;
+    font-size: 1.5vw;
     /* border: 1px solid black; */
 }
