--- a/resources/css/profile.css
+++ b/resources/css/profile.css
@@ -8,6 +8,7 @@ body {
     height: 100vh;
     overflow-y: auto;
     overflow-x: hidden;
+    font-family: 'Poppins';
     z-index: -1;
 }
 
@@ -19,10 +20,10 @@ body {
 }
 
 .ellipse-1 {
-    left: 30%;
+    left: 15%;
     top: 15%;
     background: linear-gradient(270.64deg, #BFBCEB 13.73%, #EFC4CF 92.26%);
-    filter: blur(130px);
+    filter: blur(100px);
 }
 
 .ellipse-2 {
@@ -57,7 +58,7 @@ body {
 
 .navbar-container{
     height: 8vh;
-    margin-bottom: 13vh;
+    margin-bottom: 5vh;
     font-family: 'Poppins';
 }
 
