--- a/resources/css/color.css
+++ b/resources/css/color.css
@@ -74,14 +74,27 @@ body {
     height: 30vw;
     width: 65vw;
     color: rgba(0, 0, 0, 0.49);
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.input img {
-    width: 14vw;
-}
+/* .input img {
+    width: 10vw;
+} */
 
 .input p {
     font-size: 1.5vw;
+}
+
+.select {
+    background-color: #6e7bdb;
+    font-size: 1.4vw;
+    padding: 0.5vw 2vw;
+    margin: 0 30vw;
+    border-radius: 1vw;
+    color: #ffffff;
+    /* border: 1px solid black; */
 }
 
 .generate {
@@ -126,7 +139,7 @@ body {
 }
 
 .output img {
-    width: 20vw;
+    width: 50vw;
 }
 
 .output h1 {
@@ -152,4 +165,27 @@ body {
     color: #4f4f4f;
     font-size: 1.5vw;
     /* border: 1px solid black; */
+}
+
+.imDrag {
+    width: 40vw;
+    /* border: 1px solid black; */
+}
+
+.preview {
+    width: 90%;
+    height: 90%;
+    /* border: 1px solid black; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.preview2 {
+    width: 90%;
+    height: 90%;
+    /* border: 1px solid black; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
