--- a/resources/css/achievement.css
+++ b/resources/css/achievement.css
@@ -5,15 +5,14 @@
 body {
     width: 100vw;
     height: 100vh;
-    overflow-y: hidden;
+    overflow-y: auto;
     overflow-x: hidden;
     font-family: 'Poppins';
-    z-index: 999;
 }
 
-.backgroundlgn {
-    margin-top: -8vw;
-    @apply max-h-full;
+.backgroundach {
+    margin-top: -2.75vw;
+    @apply max-h-full z-0;
     position: relative;
 }
 
@@ -29,7 +28,7 @@ body {
     left: -8%;
     top: 4%;
     background: linear-gradient(270.64deg, #BFBCEB 13.73%, #dcb9e7 92.26%);
-    filter: blur(3vw);
+    filter: blur(4vw);
     z-index: -1;
 }
 
@@ -37,31 +36,31 @@ body {
     left: 70%;
     top: 35%;
     background: #FFDACA;
-    filter: blur(3vw);
+    filter: blur(4vw);
 }
 
 .ellipse-3 {
     left: 40%;
     top: 15%;
     background: linear-gradient(109.91deg, #A9C5E7 10.17%, #F2CBEC 88.19%);
-    filter: blur(3vw);
+    filter: blur(4vw);
 }
 
 .ellipse-4 {
     left: -15%;
     top: 55%;
     background: #FFDACA;
-    filter: blur(3vw);
+    filter: blur(4vw);
 }
 
 .ellipse-5 {
     left: 40%;
     top: 70%;
     background: linear-gradient(96.78deg, #A9C5E7 -4.94%, #FFDACA 86.78%);
-    filter: blur(3vw);
+    filter: blur(4vw);
 }
 
 .navbar-container{
     height: 8vh;
-    margin-bottom: 13vh;
+    margin-bottom: 5vh;
 }
