--- a/resources/css/color.css
+++ b/resources/css/color.css
@@ -62,6 +62,9 @@ body {
     text-align: center;
     align-items: center;
     margin: 2vw 0;
+    /* width: 55%;
+    height: 25vw; */
+    /* border: 1px solid black; */
 }
 
 .input {
@@ -71,17 +74,25 @@ body {
         rgba(242, 242, 242, 0) 100%
     );
     border: 0.125rem dashed rgba(133, 133, 133, 0.88);
-    height: 30vw;
-    width: 65vw;
+    /* height: 30vw; */
+    width: 100%;
+    height: 100%;
+    /* border: 1px solid black; */
     color: rgba(0, 0, 0, 0.49);
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-/* .input img {
+.kotak {
+    width: 60vw;
+    height: 30vw;
+    /* border: 1px solid black; */
+}
+
+.input img {
     width: 10vw;
-} */
+}
 
 .input p {
     font-size: 1.5vw;
@@ -123,7 +134,6 @@ body {
 
 .hasil {
     padding-top: 1.5vw;
-
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -137,7 +147,7 @@ body {
     /* height: 40vw; */
     width: 70%;
     padding: 2vw 0vw;
-    padding-bottom: 5vw;
+    padding-bottom: 2vw;
     background: rgba(255, 255, 255, 0.5);
     box-shadow: 0px 0px 52px rgba(0, 0, 0, 0.25);
 }
@@ -177,12 +187,18 @@ body {
 }
 
 .preview {
-    width: 50vw;
+    width: 90%;
+    height: 90%;
     /* height: 20vw; */
     /* border: 1px solid black; */
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.preview img {
+    height: 90%;
+    width: auto;
 }
 
 .preview2 {
@@ -194,25 +210,27 @@ body {
     align-items: center;
 }
 
-.con-input {
-    /* border: 1px solid black; */
-    padding: 0vw 0;
-}
-
 .colorRow {
-    border: 1px solid black;
+    /* border: 1px solid black; */
     display: flex;
     flex-direction: row;
     /* width: 40vw; */
     justify-content: space-around;
     height: 3vw;
     margin-top: 2vw;
-    width: 60%;
+    width: 70%;
 }
 
 .box1 {
-    width: 6vw;
+    width: 8vw;
     height: 5vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    font-size: 1.3vw;
+    -webkit-text-stroke-width: 0.1vw;
+    -webkit-text-stroke-color: black;
 }
 
 .back {
