--- a/resources/css/color.css
+++ b/resources/css/color.css
@@ -228,8 +228,10 @@ body {
     justify-content: center;
     align-items: center;
     color: white;
+    font-weight: bold;
     font-size: 1.3vw;
-    -webkit-text-stroke-width: 0.1vw;
+    -webkit-text-stroke-width: 0.09vw;
+    /* text-shadow: 1vw 1vw 3vw rgb(0, 0, 0, 0.8); */
     -webkit-text-stroke-color: black;
 }
 
