--- a/resources/css/signin.css
+++ b/resources/css/signin.css
@@ -75,13 +75,19 @@ body {
     z-index: 1;
     width: 80%;
     max-width: 400px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .form-lgn {
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25),
         0px 0px 55px 6px rgba(0, 0, 0, 0.6);
     border-radius: 34px;
-    @apply flex-col bg-white px-10 justify-center;
+    @apply flex-col bg-white px-10 justify-center items-center;
+    align-items: center;
+    /* border: 1px solid black; */
 }
 
 .inputbox {
@@ -96,6 +102,11 @@ body {
     display: flex;
     justify-content: center;
     color: red;
+}
+
+.github {
+    /* border: 1px solid black; */
+    align-self: center;
 }
 
 @media (max-width: 768px) {
