--- a/public/css/course-detail.css
+++ b/public/css/course-detail.css
@@ -30,7 +30,7 @@
     margin-left: 1vw;
 }
 
-.CourseName, .CourseDesc, .Category, .Enroll{
+.CourseName, .CourseDesc, .Category, .Enroll, .day-button, .courseDTitle{
     font-family: "Poppins";
 }
 
@@ -61,6 +61,7 @@
     box-shadow: inset 0 0 0.45vw rgb(0, 0, 0, 0.5);
     color: #6F77E2;
     width: 7vw;
+    height: 1.75vw;
     padding: 0.25vw;
     border-radius: 0.75vw;
     position: absolute;
@@ -68,13 +69,48 @@
     right: 0.85vw;
 }
 
+.cancel-button , .enroll-button{
+    font-weight: 700;
+    font-size: 0.9vw;
+}
+
 .Enroll:hover{
     background-color:#6F77E2;
     color: white;
+    cursor: pointer;
 }
 
 video{
     width: 48vw;
     height: auto;
     margin-bottom: 1vw;
+}
+
+.CourseName{
+    padding-top: 1vw;
+}
+
+.day-button{
+    font-weight: 600;
+    font-size: 1.25vw;
+    padding-left: 1vw;
+}
+
+.courseDTitle{
+    font-size: 0.95vw;
+    padding: 0.85vw 1vw 1vw 2vw;
+    margin-left: 0.6vw;
+    border-left: solid #D1D5DB 0.2vw;
+    margin-top: -0.55vw;
+}
+
+.course-detail{
+    padding-top: 2vw;
+}
+
+
+input.cek-box{
+    width: 1.4vw;
+    height: 1.4vw;
+    margin: 0;
 }
