--- a/resources/css/achievement.css
+++ b/resources/css/achievement.css
@@ -7,7 +7,7 @@ body {
     height: 100vh;
     overflow-y: auto;
     overflow-x: hidden;
-    font-family: 'Poppins';
+    font-family: "Poppins";
 }
 
 .backgroundach {
@@ -27,7 +27,7 @@ body {
 .ellipse-1 {
     left: -8%;
     top: 4%;
-    background: linear-gradient(270.64deg, #BFBCEB 13.73%, #dcb9e7 92.26%);
+    background: linear-gradient(270.64deg, #bfbceb 13.73%, #dcb9e7 92.26%);
     filter: blur(4vw);
     z-index: -1;
 }
@@ -35,32 +35,44 @@ body {
 .ellipse-2 {
     left: 70%;
     top: 35%;
-    background: #FFDACA;
+    background: #ffdaca;
     filter: blur(4vw);
 }
 
 .ellipse-3 {
     left: 40%;
     top: 15%;
-    background: linear-gradient(109.91deg, #A9C5E7 10.17%, #F2CBEC 88.19%);
+    background: linear-gradient(109.91deg, #a9c5e7 10.17%, #f2cbec 88.19%);
     filter: blur(4vw);
 }
 
 .ellipse-4 {
     left: -15%;
     top: 55%;
-    background: #FFDACA;
+    background: #ffdaca;
     filter: blur(4vw);
 }
 
 .ellipse-5 {
     left: 40%;
     top: 70%;
-    background: linear-gradient(96.78deg, #A9C5E7 -4.94%, #FFDACA 86.78%);
+    background: linear-gradient(96.78deg, #a9c5e7 -4.94%, #ffdaca 86.78%);
     filter: blur(4vw);
 }
 
-.navbar-container{
+.navbar-container {
     height: 8vh;
     margin-bottom: 5vh;
+}
+
+.bar {
+    /* border: 1px solid black; */
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    /* margin-top: 0.6vw; */
+}
+
+.persen {
+    font-size: 1.3vw;
 }
