--- a/resources/css/profile.css
+++ b/resources/css/profile.css
@@ -3,12 +3,12 @@
 @tailwind utilities;
 
 body {
-    background-color: #F4F9FC;
+    background-color: #f4f9fc;
     width: 100%;
     height: 100vh;
     overflow-y: auto;
     overflow-x: hidden;
-    font-family: 'Poppins';
+    font-family: "Poppins";
     z-index: -1;
 }
 
@@ -22,28 +22,28 @@ body {
 .ellipse-1 {
     left: 15%;
     top: 15%;
-    background: linear-gradient(270.64deg, #BFBCEB 13.73%, #EFC4CF 92.26%);
+    background: linear-gradient(270.64deg, #bfbceb 13.73%, #efc4cf 92.26%);
     filter: blur(100px);
 }
 
 .ellipse-2 {
     left: 70%;
     top: 30%;
-    background: #FFDACA;
+    background: #ffdaca;
     filter: blur(130px);
 }
 
 .ellipse-3 {
     left: 85%;
     top: 30%;
-    background: linear-gradient(109.91deg, #A9C5E7 10.17%, #F2CBEC 88.19%);
+    background: linear-gradient(109.91deg, #a9c5e7 10.17%, #f2cbec 88.19%);
     filter: blur(130px);
 }
 
 .ellipse-4 {
     left: -5%;
     top: 25%;
-    background: #FFDACA;
+    background: #ffdaca;
     filter: blur(130px);
 }
 
@@ -51,7 +51,7 @@ body {
     left: 45%;
     top: 105%;
     z-index: -1;
-    background: linear-gradient(96.78deg, #F9DBCD -4.94%, #C4C3E9 86.78%);
+    background: linear-gradient(96.78deg, #f9dbcd -4.94%, #c4c3e9 86.78%);
     filter: blur(4vw);
 }
 
@@ -59,25 +59,24 @@ body {
     left: -2%;
     top: 90%;
     z-index: -1;
-    background: linear-gradient(96.78deg, #F9DBCD -4.94%, #C4C3E9 86.78%);
+    background: linear-gradient(96.78deg, #f9dbcd -4.94%, #c4c3e9 86.78%);
     filter: blur(4vw);
 }
 
-.navbar-container{
+.navbar-container {
     height: 8vh;
     margin-bottom: 5vh;
-    font-family: 'Poppins';
+    font-family: "Poppins";
 }
 
-.rectangle{
+.rectangle {
     position: relative;
     z-index: 1;
     margin-top: 9vw;
     @apply container mx-auto w-11/12 flex flex-col gap-7 md:flex-row;
-
 }
 
-.img-profile{
+.img-profile {
     z-index: 1;
     position: absolute;
     width: 38vw;
@@ -85,31 +84,43 @@ body {
     left: 52.5vh;
 }
 
-.continue{
+.continue {
     position: relative;
     z-index: 1;
     margin-top: 2vw;
     @apply container mx-auto w-11/12 flex flex-col gap-7 md:flex-row;
-
 }
 
-.continue .logo{
+.continue .logo {
     position: relative;
     width: 9.5vw;
     margin-top: -0.7vw;
-    margin-bottom:-0.5vw;
+    margin-bottom: -0.5vw;
     margin-left: -1.1vw;
 }
 
-.courses{
+.courses {
     position: relative;
     z-index: 1;
     margin-top: 2vw;
     @apply container mx-auto w-11/12 flex flex-col gap-7 md:flex-row;
 }
 
-.courses .logo{
+.courses .logo {
     position: relative;
     width: 7vw;
     margin-left: -1vw;
+}
+
+.signout {
+    /* border: 1px solid black; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1vw;
+    font-weight: 600;
+    padding: 0.3vw;
+    border-radius: 1vw;
+    background-color: #5f67ef;
+    color: white;
 }
